# EchoAccess

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo-s15/: .global-cache
.cargo-s15/registry/cache/index.crates.io-1949cf8c6b5b557f/: pinentry-0.6.2.crate  self_update-0.43.1.crate
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/3/a/: age
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ag/e-/: age-core
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ba/si/: basic-toml
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/fi/nd/: find-crate
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/fl/ue/: fluent  fluent-bundle  fluent-langneg  fluent-syntax
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/i1/8n/: i18n-config  i18n-embed  i18n-embed-fl  i18n-embed-impl
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/in/tl/: intl-memoizer  intl_pluralrules
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/io/_t/: io_tee
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/pa/ss/: password-hash
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/pb/kd/: pbkdf2
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/pi/ne/: pinentry
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/rp/as/: rpassword
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/rt/oo/: rtoolbox
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ru/st/: rust-embed  rust-embed-impl  rust-embed-utils
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/se/lf/: self_update
.cargo-s15/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/un/ic/: unic-langid  unic-langid-impl
.cargo-s15/registry/src/index.crates.io-1949cf8c6b5b557f/pinentry-0.6.2/: .cargo_vcs_info.json  Cargo.toml
.cargo-s15/registry/src/index.crates.io-1949cf8c6b5b557f/self_update-0.43.1/: .cargo_vcs_info.json  Cargo.toml
.github/workflows/: ci.yml  pages.yml  rebuild-release.yml  release.yml
.local/: task_make_impl_plan.md
.local/stages/: overview.md
.local/stages/S01_scaffold/: gate_report.md
.local/stages/S02_core_abstractions/: gate_report.md
.local/stages/S03_profile/: gate_report.md
.local/stages/S04_storage/: gate_report.md
.local/stages/S05_crypto/: gate_report.md
.local/stages/S06_sync/: gate_report.md
.local/stages/S07_permission/: gate_report.md
.local/stages/S08_cli/: gate_report.md
.local/stages/S10_field_enc/: gate_report.md
.local/stages/S13_device_push/: gate_report.md
.local/stages/S14_portability/: gate_report.md
.local/stages/S15_auto_update/: gate_report.md
.local/stages/S16_multi_backend/: gate_report.md
.local/wp_outputs/: wp1a_dependency_matrix.md
crates/echoax-cli/: Cargo.toml
crates/echoax-cli/src/: dashboard.html  main.rs  web.rs
crates/echoax-cli/src/commands/: config_cmd.rs  mod.rs  profile.rs  sync.rs  update.rs
crates/echoax-core/: Cargo.toml
crates/echoax-core/src/: error.rs  lib.rs
crates/echoax-core/src/config/: model.rs
crates/echoax-core/src/crypto/: field_enc.rs  file_enc.rs  kdf.rs  mod.rs  session.rs
crates/echoax-core/src/device/: bootstrap.rs  discovery.rs  mod.rs  push.rs
crates/echoax-core/src/permission/: mod.rs  policy.rs  posix.rs  windows.rs
crates/echoax-core/src/portability/: export.rs  import.rs  mod.rs
crates/echoax-core/src/profile/: loader.rs  mod.rs  model.rs
crates/echoax-core/src/storage/: git.rs  mod.rs  s3.rs  sqlite.rs  traits.rs
crates/echoax-core/src/sync/: approval.rs  conflict.rs  groups.rs  merge.rs  mod.rs  reconciler.rs  scanner.rs  state.rs
crates/echoax-core/src/trigger/: manual.rs  mod.rs  scheduler.rs  watcher.rs
crates/echoax-core/src/ui/: adapter.rs
crates/echoax-core/src/updater/: checker.rs  installer.rs  mod.rs
crates/echoax-tui/: Cargo.toml
crates/echoax-tui/src/: app.rs  lib.rs  main.rs
crates/echoax-tui/src/theme/: mod.rs  nier.rs  palette.rs
crates/echoax-tui/src/views/: dashboard.rs  mod.rs  profiles.rs  sync_view.rs
crates/echoax-web/: Cargo.toml
crates/echoax-web/src/: main.rs
crates/echoax-web/src/routes/: health.rs  status.rs
docs/: book.toml
docs/src/: SUMMARY.md  cli-reference.md  configuration.md  encryption.md  installation.md  introduction.md  landing.html  profiles.md  quickstart.md  sync.md
docs/theme/: nier.css
scripts/: build-release.sh
