[package]
name = "echoax-cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "echo_access"
path = "src/main.rs"

[dependencies]
echoax-core = { path = "../echoax-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
indicatif = "0.17"
dirs = "6"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde_json = "1"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
