[package]
name = "echoax-core"
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
dirs = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
aws-sdk-s3 = "1"
aws-config = "1"
age = { version = "0.11", features = ["cli-common"] }
argon2 = "0.5"
rand = "0.8"
self_update = { version = "0.43", features = ["rustls"] }
semver = "1"

[dev-dependencies]
tempfile = "3"
