[package]
name = "echoax-tui"
edition.workspace = true
version.workspace = true

[lib]
name = "echoax_tui"
path = "src/lib.rs"

[[bin]]
name = "echoax-tui"
path = "src/main.rs"

[dependencies]
dirs = "6"
echoax-core = { path = "../echoax-core" }
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
