[package]
name = "echoax-web"
edition.workspace = true
version.workspace = true

[[bin]]
name = "echoax-web"
path = "src/main.rs"

[dependencies]
echoax-core = { path = "../echoax-core" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde_json = "1"
tower = "0.5"
